# rusty-promql-parser

./: AGENTS.md  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
examples/: test_parse.rs
rusty-promql-parser-fuzz/: .gitignore  Cargo.toml  Makefile  README.md  create-in.sh
rusty-promql-parser-fuzz/src/: in.txt  main.rs
src/: ast.rs  lib.rs
src/lexer/: duration.rs  identifier.rs  mod.rs  number.rs  string.rs  whitespace.rs
src/parser/: aggregation.rs  binary.rs  expr.rs  function.rs  mod.rs  selector.rs  subquery.rs  unary.rs
tests/: aggregation_parser_tests.rs  duration_parser_tests.rs  error_tests.rs  function_parser_tests.rs  fuzz_tests.rs  identifier_parser_tests.rs  literal_parser_tests.rs  number_parser_tests.rs  printer_tests.rs  readme_examples_tests.rs  string_parser_tests.rs  test_data.rs
tests/common/: mod.rs
tests/integration/: mod.rs
tests/lexer/: duration_tests.rs  identifier_tests.rs  mod.rs  number_tests.rs  string_tests.rs
tests/parser/: aggregation_tests.rs  binary_tests.rs  function_tests.rs  literal_tests.rs  matrix_tests.rs  mod.rs  selector_tests.rs  subquery_tests.rs  unary_tests.rs
